ChrissyRoshak/07-wp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cr-wordpress
  namespace: chrissyroshak
  labels:
    app: cr-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cr-wordpress
  template:
    metadata:
      labels:
        app: cr-wordpress
    spec:
      containers:
        - name: cr-wordpress-container
          image: wordpress:6.3.1
          imagePullPolicy: IfNotPresent          
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: '2Gi'
              cpu: '2'
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html/wp-content
            - mountPath: /usr/local/etc/php/conf.d/uploads.ini
              name: php-config
              subPath: uploads.ini
  #          - mountPath: /var/www/html/.htaccess
  #            name: wp-htaccess
  #            subPath: .htaccess



          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "chown -R www-data:www-data /var/www; chmod -R 774 /var/www"]                        
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: cr-pvc
        - configMap:
            defaultMode: 420
            name: wp-php-config
          name: php-config
#        - configMap:
#            defaultMode: 0777
#            name: wp-htaccess
#          name: wp-htaccess
