ChrissyRoshak/08-wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cr-wordpress-service
  namespace: chrissyroshak
spec:
  selector:
    app: cr-wordpress
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: https
