ChrissyRoshak/10-wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cr-wordpress-ingress-secure
  namespace: chrissyroshak
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: restore.chrissyroshak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  cr-wordpress-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  cr-wordpress-service
                port:
                  number: 443
